# json5pp

./: CMakeLists.txt  Changlog.md  README.md  json5cpp.wrap  meson.build
include/: json5pp.hpp
include/json5pp/: json5pp.h  json5pp.hpp
test/: Makefile  exec.cpp  fail.cpp  pass.cpp
test/input/: exec_array_nullptr_element.cpp  exec_custom_indent.cpp  exec_object_nullptr_element.cpp  exec_stringify.cpp  pass5_+12345.hpp  pass5_array_trailing_comma.hpp  pass5_multi_line_comment.hpp  pass5_number_hex.hpp  pass5_number_hex_negative.hpp  pass5_object_non_quoted_key.hpp  pass5_object_trailing_comma.hpp  pass5_single_line_comment.hpp  pass_array_empty.hpp  pass_array_single.hpp  pass_array_two.hpp  pass_false.hpp  pass_null.hpp  pass_number_12.345.hpp  pass_number_12345.hpp  pass_object_dup_keys.hpp  pass_object_empty.hpp  pass_object_single.hpp  pass_object_two.hpp  pass_string_escape.hpp  pass_string_plain.hpp  pass_string_unicode.hpp  pass_true.hpp
tests/: CMakeLists.txt  README.md  array_tests.cpp  basic_tests.cpp  get_tests.cpp  meson.build  obj_tests.cpp
